--- a/regulamin.html
+++ b/regulamin.html
@@ -4,63 +4,92 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Legends Risings — Regulamin</title>
-  <link rel="icon" type="image/png" href="logo.png" />
+  <link rel="icon" type="image/png" href="favicon.png" />
+
   <style>
     :root {
-      --card: #1a1a1a;
+      --bg: #0d0d0d;
+      --card: rgba(26, 26, 26, 0.85);
       --accent: #f97316;
       --accent-light: #fb923c;
       --muted: #cbd5e1;
       color-scheme: dark;
     }
+
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
       color: #f1f5f9;
-      background: #000;
-      position: relative;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      text-align: left;
+      position: relative;
+      overflow-x: hidden;
     }
+
+    /* Rozmyte tło */
     body::before {
       content: '';
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
       background: url('zdjecia/1.png') no-repeat center center / cover;
-      background-attachment: fixed;
       filter: blur(8px);
       z-index: -2;
     }
+
+    /* Przyciemnienie – jaśniejsze */
     body::after {
       content: '';
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.5));
+      background: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.45));
+      backdrop-filter: blur(1.5px);
       z-index: -1;
     }
 
-    .container { max-width: 980px; margin: 36px auto; padding: 24px; flex: 1; }
-    header { display: flex; gap: 16px; align-items: center; }
-    .logo img { width: 140px; height: auto; }
-    h1 { margin: 0; font-size: 26px; color: var(--accent); }
-    p.lead { margin: 6px 0 18px; color: var(--muted); }
-
-    .card {
-      background: rgba(26,26,26,0.9);
-      padding: 28px;
-      border-radius: 16px;
+    .container {
+      max-width: 980px;
+      width: 100%;
+      margin: 40px 20px;
+      background: var(--card);
+      padding: 32px;
+      border-radius: 14px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-      margin-top: 24px;
       animation: fadeIn 0.6s ease;
     }
 
+    header {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+
+    /* Logo z efektem hover */
+    .logo img {
+      width: 140px;
+      height: auto;
+      transition: all 0.4s ease;
+      cursor: pointer;
+    }
+    .logo img:hover {
+      transform: scale(1.08) rotate(2deg);
+      filter: brightness(1.15) drop-shadow(0 0 15px rgba(249,115,22,0.4));
+    }
+
+    h1 { margin: 0; font-size: 26px; color: var(--accent); }
+    p.lead { margin: 6px 0 18px; color: var(--muted); }
+
     h2 {
       color: var(--accent-light);
-      margin-top: 24px;
+      margin-top: 30px;
       border-bottom: 2px solid rgba(249,115,22,0.4);
       padding-bottom: 6px;
       font-size: 20px;
@@ -71,39 +100,50 @@
       padding-left: 0;
       margin: 10px 0 20px;
     }
+
     ul.rules li {
       margin: 8px 0;
-      padding: 10px 12px;
+      padding: 10px 14px;
       background: rgba(255,255,255,0.05);
       border-left: 4px solid var(--accent);
       border-radius: 8px;
-      display: flex;
-      gap: 10px;
-      align-items: flex-start;
-      line-height: 1.5;
+      line-height: 1.6;
     }
-    ul.rules li span.emoji { font-size: 18px; }
 
     .note {
-      margin: 12px 0;
-      padding: 12px;
+      margin: 14px 0;
+      padding: 14px;
       border-left: 4px solid var(--accent);
       background: rgba(249,115,22,0.1);
+      border-radius: 8px;
+      line-height: 1.5;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 18px;
+      padding: 12px 20px;
+      border-radius: 10px;
+      background: var(--accent);
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.25s ease;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
+    }
+
+    .btn:hover {
+      background: var(--accent-light);
+      transform: scale(1.05);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
     }
 
     .btn.ghost {
-      display: inline-block;
-      margin-top: 12px;
-      padding: 10px 16px;
-      border-radius: 10px;
       background: transparent;
       border: 1px solid rgba(255,255,255,0.2);
-      color: #f1f5f9;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all 0.2s;
-      cursor: pointer;
+      color: var(--muted);
     }
+
     .btn.ghost:hover {
       background: var(--accent);
       border-color: var(--accent);
@@ -113,7 +153,7 @@
     .footer {
       margin: 40px auto 20px;
       font-size: 14px;
-      color: rgba(241, 245, 249, 0.7);
+      color: rgba(241,245,249,0.7);
       text-align: center;
     }
 
@@ -125,6 +165,7 @@
       flex-direction: column;
       gap: 12px;
     }
+
     .socials a {
       display: flex;
       align-items: center;
@@ -135,11 +176,16 @@
       color: #f1f5f9;
       text-decoration: none;
       font-weight: 600;
-      transition: background 0.2s;
+      backdrop-filter: blur(6px);
+      transition: all 0.25s ease;
     }
-    .socials a:hover { background: rgba(255,255,255,0.1); }
 
-    @media (max-width:600px) {
+    .socials a:hover {
+      background: rgba(255,255,255,0.12);
+      transform: translateY(-2px);
+    }
+
+    @media (max-width: 600px) {
       header { flex-direction: column; align-items: flex-start; }
       .logo img { width: 110px; }
     }
@@ -150,102 +196,97 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
-      <div class="logo">
-        <img src="logo.png" alt="Legends Risings Logo">
-      </div>
+      <div class="logo"><a href="index.html"><img src="logo.png" alt="Legends Risings Logo"></a></div>
       <div>
         <h1>Legends Risings — Regulamin</h1>
         <p class="lead">Oficjalne zasady obowiązujące na serwerze.</p>
       </div>
     </header>
 
-    <div class="card">
-      <div class="note">
-        ⚠️ Grając na serwerze, akceptujesz wszystkie poniższe zasady. Dbaj o kulturę, szacunek i dobrą zabawę.
-      </div>
-
-      <h2>📜 1. POSTANOWIENIA OGÓLNE</h2>
-      <ul class="rules">
-        <li>1.1. Dołączając na serwer Legends Risings, każdy gracz akceptuje niniejszy regulamin.</li>
-        <li>1.2. Regulamin ma na celu zapewnienie przyjaznej, bezpiecznej i uczciwej rozgrywki.</li>
-        <li>1.3. Administracja zastrzega sobie prawo do zmiany regulaminu w dowolnym momencie.</li>
-        <li>1.4. Nieznajomość regulaminu nie zwalnia z jego przestrzegania.</li>
-        <li>1.5. Administracja ma prawo podejmować decyzje indywidualne w sytuacjach nieujętych w regulaminie.</li>
-      </ul>
-
-      <h2>⚔️ 2. ZASADY OGÓLNE ZACHOWANIA</h2>
-      <ul class="rules">
-        <li>2.1. Zachowuj kulturę osobistą – zakaz obrażania, wulgaryzmów, prowokacji, gróźb oraz toksycznych zachowań.</li>
-        <li>2.2. Zakaz spamowania, floodowania, reklamowania innych serwerów lub stron.</li>
-        <li>2.3. Zakaz podszywania się pod innych graczy, administrację lub znane osoby.</li>
-        <li>2.4. Nie publikuj treści o charakterze rasistowskim, wulgarnym, erotycznym, politycznym ani religijnym.</li>
-        <li>2.5. Współpracuj z administracją – utrudnianie jej pracy grozi banem.</li>
-      </ul>
-
-      <h2>🏰 3. ZASADY GRY</h2>
-      <ul class="rules">
-        <li>3.1. Zakaz używania cheatów, hacków, modów dających przewagę (np. X-Ray, KillAura, Fly, AutoClicker).</li>
-        <li>3.2. Zakaz wykorzystywania bugów, glitchy oraz błędów mapy lub pluginów.</li>
-        <li>3.3. Zakaz griefingu, kradzieży oraz niszczenia cudzych budowli bez zgody właściciela.</li>
-        <li>3.4. PvP dozwolone tylko w wyznaczonych strefach lub za zgodą obu stron.</li>
-        <li>3.5. Nie utrudniaj gry innym (np. spawn kill, zalewanie lawą, blokowanie wejść).</li>
-        <li>3.6. Zakaz tworzenia farm lagujących lub konstrukcji powodujących przeciążenie serwera.</li>
-      </ul>
-
-      <h2>💬 4. KOMUNIKACJA I CZAT</h2>
-      <ul class="rules">
-        <li>4.1. Używaj języka polskiego lub angielskiego w sposób zrozumiały i kulturalny.</li>
-        <li>4.2. Zakaz spamowania lub nadmiernego używania emotek/symboli.</li>
-        <li>4.3. Reklama innych serwerów, Discordów, kanałów YouTube itp. bez zgody administracji – zabroniona.</li>
-        <li>4.4. Nie publikuj prywatnych informacji innych graczy.</li>
-      </ul>
-
-      <h2>💎 5. DZIAŁALNOŚĆ NA SERWERZE</h2>
-      <ul class="rules">
-        <li>5.1. Buduj i rozwijaj swoją postać z poszanowaniem innych graczy.</li>
-        <li>5.2. Nie niszcz wspólnych terenów publicznych, spawnów, sklepów, eventów.</li>
-        <li>5.3. Wszelkie sklepy, gildie lub klany muszą działać zgodnie z zasadami serwera.</li>
-        <li>5.4. Oszustwa handlowe i wymiany "na słowo" robisz na własną odpowiedzialność.</li>
-      </ul>
-
-      <h2>🧙 6. ADMINISTRACJA</h2>
-      <ul class="rules">
-        <li>6.1. Administracja ma prawo do podejmowania decyzji według własnego uznania.</li>
-        <li>6.2. Administracja nie jest zobowiązana do tłumaczenia każdej decyzji.</li>
-        <li>6.3. Próby przekupstwa, szantażu lub wymuszania decyzji skutkują natychmiastowym banem.</li>
-        <li>6.4. Wszelkie problemy i nadużycia zgłaszaj administracji (np. na Discordzie).</li>
-      </ul>
-
-      <h2>⚠️ 7. KARY</h2>
-      <ul class="rules">
-        <li>7.1. Możliwe kary: ostrzeżenie, wyciszenie, wyrzucenie, ban czasowy, ban permanentny.</li>
-        <li>7.2. Rodzaj kary zależy od decyzji administracji.</li>
-        <li>7.3. Próby obejścia kary (np. poprzez zmianę konta/IP) skutkują permanentnym banem.</li>
-      </ul>
-
-      <h2>🌈 8. POSTANOWIENIA KOŃCOWE</h2>
-      <ul class="rules">
-        <li>8.1. Regulamin obowiązuje na wszystkich platformach serwera (Minecraft, Discord, forum itp.).</li>
-        <li>8.2. Administracja nie ponosi odpowiedzialności za utratę przedmiotów lub danych.</li>
-        <li>8.3. Serwer jest tworzony z myślą o dobrej zabawie – szanuj innych i graj fair!</li>
-      </ul>
-
-      <div class="note">
-        ✨ Życzymy miłej gry na <strong>Legends Risings!</strong><br>
-        <em>"Legendy nie rodzą się – one powstają z odwagi i współpracy."</em>
-      </div>
-
-      <div class="cta">
-        <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
-      </div>
+    <div class="note">
+      ⚠️ Grając na serwerze, akceptujesz wszystkie poniższe zasady. Dbaj o kulturę, szacunek i dobrą zabawę.
     </div>
 
-    <div class="footer">
-      ip-legendsrising.pl | wersja 1.21.5+
+    <h2>📜 1. POSTANOWIENIA OGÓLNE</h2>
+    <ul class="rules">
+      <li>1.1. Dołączając na serwer Legends Risings, każdy gracz akceptuje niniejszy regulamin.</li>
+      <li>1.2. Regulamin ma na celu zapewnienie przyjaznej, bezpiecznej i uczciwej rozgrywki.</li>
+      <li>1.3. Administracja zastrzega sobie prawo do zmiany regulaminu w dowolnym momencie.</li>
+      <li>1.4. Nieznajomość regulaminu nie zwalnia z jego przestrzegania.</li>
+      <li>1.5. Administracja ma prawo podejmować decyzje indywidualne w sytuacjach nieujętych w regulaminie.</li>
+    </ul>
+
+    <h2>⚔️ 2. ZASADY OGÓLNE ZACHOWANIA</h2>
+    <ul class="rules">
+      <li>2.1. Zachowuj kulturę osobistą – zakaz obrażania, wulgaryzmów, prowokacji, gróźb oraz toksycznych zachowań.</li>
+      <li>2.2. Zakaz spamowania, floodowania, reklamowania innych serwerów lub stron.</li>
+      <li>2.3. Zakaz podszywania się pod innych graczy, administrację lub znane osoby.</li>
+      <li>2.4. Nie publikuj treści o charakterze rasistowskim, wulgarnym, erotycznym, politycznym ani religijnym.</li>
+      <li>2.5. Współpracuj z administracją – utrudnianie jej pracy grozi banem.</li>
+    </ul>
+
+    <h2>🏰 3. ZASADY GRY</h2>
+    <ul class="rules">
+      <li>3.1. Zakaz używania cheatów, hacków, modów dających przewagę (np. X-Ray, KillAura, Fly, AutoClicker).</li>
+      <li>3.2. Zakaz wykorzystywania bugów, glitchy oraz błędów mapy lub pluginów.</li>
+      <li>3.3. Zakaz griefingu, kradzieży oraz niszczenia cudzych budowli bez zgody właściciela.</li>
+      <li>3.4. PvP dozwolone tylko w wyznaczonych strefach lub za zgodą obu stron.</li>
+      <li>3.5. Nie utrudniaj gry innym (np. spawn kill, zalewanie lawą, blokowanie wejść).</li>
+      <li>3.6. Zakaz tworzenia farm lagujących lub konstrukcji powodujących przeciążenie serwera.</li>
+    </ul>
+
+    <h2>💬 4. KOMUNIKACJA I CZAT</h2>
+    <ul class="rules">
+      <li>4.1. Używaj języka polskiego lub angielskiego w sposób zrozumiały i kulturalny.</li>
+      <li>4.2. Zakaz spamowania lub nadmiernego używania emotek/symboli.</li>
+      <li>4.3. Reklama innych serwerów, Discordów, kanałów YouTube itp. bez zgody administracji – zabroniona.</li>
+      <li>4.4. Nie publikuj prywatnych informacji innych graczy.</li>
+    </ul>
+
+    <h2>💎 5. DZIAŁALNOŚĆ NA SERWERZE</h2>
+    <ul class="rules">
+      <li>5.1. Buduj i rozwijaj swoją postać z poszanowaniem innych graczy.</li>
+      <li>5.2. Nie niszcz wspólnych terenów publicznych, spawnów, sklepów, eventów.</li>
+      <li>5.3. Wszelkie sklepy, gildie lub klany muszą działać zgodnie z zasadami serwera.</li>
+      <li>5.4. Oszustwa handlowe i wymiany „na słowo” robisz na własną odpowiedzialność.</li>
+    </ul>
+
+    <h2>🧙 6. ADMINISTRACJA</h2>
+    <ul class="rules">
+      <li>6.1. Administracja ma prawo do podejmowania decyzji według własnego uznania.</li>
+      <li>6.2. Administracja nie jest zobowiązana do tłumaczenia każdej decyzji.</li>
+      <li>6.3. Próby przekupstwa, szantażu lub wymuszania decyzji skutkują natychmiastowym banem.</li>
+      <li>6.4. Wszelkie problemy i nadużycia zgłaszaj administracji (np. na Discordzie).</li>
+    </ul>
+
+    <h2>⚠️ 7. KARY</h2>
+    <ul class="rules">
+      <li>7.1. Możliwe kary: ostrzeżenie, wyciszenie, wyrzucenie, ban czasowy, ban permanentny.</li>
+      <li>7.2. Rodzaj kary zależy od decyzji administracji.</li>
+      <li>7.3. Próby obejścia kary (np. poprzez zmianę konta/IP) skutkują permanentnym banem.</li>
+    </ul>
+
+    <h2>🌈 8. POSTANOWIENIA KOŃCOWE</h2>
+    <ul class="rules">
+      <li>8.1. Regulamin obowiązuje na wszystkich platformach serwera (Minecraft, Discord, forum itp.).</li>
+      <li>8.2. Administracja nie ponosi odpowiedzialności za utratę przedmiotów lub danych.</li>
+      <li>8.3. Serwer jest tworzony z myślą o dobrej zabawie – szanuj innych i graj fair!</li>
+    </ul>
+
+    <div class="note">
+      ✨ Życzymy miłej gry na <strong>Legends Risings!</strong><br>
+      <em>"Legendy nie rodzą się – one powstają z odwagi i współpracy."</em>
     </div>
+
+    <a class="btn ghost" href="index.html">⬅️ Powrót</a>
+  </div>
+
+  <div class="footer">
+    ip-legendsrising.pl | wersja 1.21.5+
   </div>
 
   <div class="socials">
@@ -255,6 +296,7 @@
   </div>
 </body>
 </html>
+
 
 
 
